#308 - Fix file ordering in root directory. Fix action button line wrapping.

--- a/src/app/scripts/css/cms.css
+++ b/src/app/scripts/css/cms.css
@@ -152,6 +152,15 @@ body {
     font-size: 1rem;
 }
 
+.data-item {
+    white-space: nowrap;
+}
+
+.data-item .action-placeholder {
+    width: 32px;
+    display: inline-block;
+}
+
 form {
     margin: 0;
     display: inline;
